<resources>
    <string name="app_name">deliveryMariah</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingreso</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="email">Correo</string>
    <string name="textoi">Bienvenidos</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="Formulario">Formulario</string>


</resources>