<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo8"
    android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/boton1"
                android:id="@+id/button"
                android:text="@string/aceptar"
                app:layout_constraintLeft_toLeftOf="@id/TextPassword"
                app:layout_constraintRight_toRightOf="@id/TextPassword"
                app:layout_constraintTop_toBottomOf="@id/TextPassword" />

            <TextView
                android:id="@+id/text_user_label"
                style="@style/the_inputs"
                android:text="@string/textoi"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextUserName"
                style="@style/inputs2"
                android:hint="@string/user"
                app:layout_constraintLeft_toLeftOf="@id/text_user_label"
                app:layout_constraintRight_toRightOf="@id/text_user_label"
                app:layout_constraintTop_toBottomOf="@id/text_user_label"
                app:startIconContentDescription="@string/user"
                app:startIconDrawable="@drawable/ic_usuario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUserName2"
                    style="@style/t1"
                    android:inputType="textPersonName"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextPassword"
                style="@style/inputs2"
                android:hint="@string/password"
                app:layout_constraintLeft_toLeftOf="@id/editTextUserName"
                app:layout_constraintRight_toRightOf="@id/editTextUserName"
                app:layout_constraintTop_toBottomOf="@id/editTextUserName"
                app:startIconContentDescription="@string/password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/the_passwords"
                    android:id="@+id/Password2"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>