<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/imag1"
    android:layout_height="match_parent"
    tools:context=".interface_user.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    <TextView
        android:id="@+id/text_user_label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="@dimen/border_left_right"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="@dimen/text_height"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUserName1"
        style="@style/the_inputs"
        android:hint="@string/user"
        app:startIconContentDescription="@android:string/copyUrl"
        app:startIconDrawable="@drawable/ic_usuario"
        app:startIconTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label1"
        app:layout_constraintRight_toRightOf="@id/text_user_label1"
        app:layout_constraintTop_toBottomOf="@id/text_user_label1"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name1"
            android:background="@drawable/contorno2"
            style="@style/the_inputs"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_user_label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="@dimen/border_left_right"
        android:text="@string/apellido"
        android:textColor="@color/white"
        android:textSize="@dimen/text_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/editTextUserName1"
        app:layout_constraintRight_toRightOf="@id/editTextUserName1"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName1"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUserName3"
        style="@style/the_inputs"
        android:hint="@string/apellido"
        app:startIconContentDescription="@android:string/copyUrl"
        app:startIconDrawable="@drawable/ic_baseline_dvr_24"
        app:startIconTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label3"
        app:layout_constraintRight_toRightOf="@id/text_user_label3"
        app:layout_constraintTop_toBottomOf="@id/text_user_label3"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name3"
            android:background="@drawable/contorno2"
            style="@style/the_inputs"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_user_label4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="290dp"
        android:layout_marginRight="@dimen/border_left_right"
        android:text="@string/telefono"
        android:textColor="@color/white"
        android:textSize="@dimen/text_height"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUserName4"
        style="@style/the_inputs"
        android:hint="@string/telefono"
        android:layout_marginTop="10dp"
        app:startIconContentDescription="@android:string/copyUrl"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
        app:startIconTint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label4"
        app:layout_constraintRight_toRightOf="@id/text_user_label4"
        app:layout_constraintTop_toBottomOf="@id/text_user_label4"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name4"
            android:background="@drawable/contorno2"
            style="@style/the_inputs"
            android:inputType="text|number"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/text_user_label5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="@dimen/border_left_right"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/text_height"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUserName5"
        style="@style/the_inputs"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        app:startIconContentDescription="@android:string/copyUrl"
        app:startIconDrawable="@drawable/ic_baseline_mail_24"
        app:startIconTint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/text_user_label5"
        app:layout_constraintRight_toRightOf="@id/text_user_label5"
        app:layout_constraintTop_toBottomOf="@id/text_user_label5"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name5"
            android:background="@drawable/contorno2"
            style="@style/the_inputs"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/contorno2"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="@id/editTextUserName5"
        app:layout_constraintRight_toRightOf="@id/editTextUserName5"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName5"
        android:text="A C E P T A R"
        android:textColor="#FFFFFF"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>